--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -108,7 +108,6 @@ a {
     top: 0%;
     width: 100%;
     height: 100%;
-    z-index: 0;
 }
 
 .hexagons polygon {
@@ -210,6 +209,7 @@ a {
 /*page content*/
 
 .content {
+    z-index: 99;
     background-color: #242422;
     height: 40vh;
     padding-top: 3%;
@@ -292,6 +292,17 @@ a {
 }
 
 
+/*content*/
+
+.fullpage {
+    position: relative;
+    height: 70vh!important;
+    top: -20%!important;
+    padding-top: 4%;
+    background-color: rgb(238, 237, 237);
+}
+
+
 /*home*/
 
 .home {
@@ -311,6 +322,7 @@ a {
     font-size: 2em;
     color: white;
     letter-spacing: 4px;
+    text-shadow: 2px 2px 4px #000000;
     font-family: 'Times New Roman', Times, serif;
     -webkit-animation-name: ourname;
     /* Safari 4.0 - 8.0 */
@@ -348,10 +360,12 @@ a {
     animation-duration: 7s;
 }
 
-.characterbanner span {
+.characterbanner p {
     color: #fff;
-    font-size: 1em;
+    font-weight: 600;
+    font-size: 1.5em;
     margin-left: 20%;
+    text-shadow: 2px 2px 4px #000000;
     -webkit-animation-name: ourname;
     /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 8s;
@@ -360,10 +374,12 @@ a {
     animation-duration: 8s;
 }
 
-.campaignbanner span {
+.campaignbanner p {
     color: #fff;
-    margin-left: 65%;
-    font-size: 1em;
+    margin-right: 19%;
+    font-size: 1.5em;
+    text-shadow: 2px 2px 4px #000000;
+    font-weight: 600;
     -webkit-animation-name: ourname;
     /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 8s;
@@ -386,6 +402,128 @@ a {
 
 .campaignbanner .campaigntitle {
     padding-right: 11%;
+}
+
+
+/*characters index*/
+
+.buttonselect {
+    z-index: 999!important;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.2em;
+    letter-spacing: 0.5em;
+    text-transform: uppercase;
+    color: white;
+    border: solid 1px currentColor;
+    padding: 1em;
+    margin: 3.5em 1.5em;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    background-color: transparent;
+    -webkit-animation-name: ourname;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 6s;
+    /* Safari 4.0 - 8.0 */
+    animation-name: ourname;
+    animation-duration: 6s;
+}
+
+.buttonselect:hover {
+    border: solid 1px darken(white, 5%);
+    background-color: darken(#242422, 2%);
+    color: darken(white, 10%);
+}
+
+.buttonselect a {
+    z-index: 99;
+    color: white;
+}
+
+
+/*show all characters*/
+
+.boxcontent {
+    z-index: 99;
+    height: 85%;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: #2e2e2d;
+    box-shadow: 1px 1px 9px rgb(58, 58, 58);
+    overflow-y: scroll;
+    border-radius: 1%;
+}
+
+.charactercard {
+    color: white;
+    height: 20%;
+    border: solid 1px currentColor;
+    padding: 1em;
+    margin: 1.5em 1.5em;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    background-color: transparent;
+    -webkit-animation-name: ourname;
+    -webkit-animation-duration: 4s;
+    animation-name: ourname;
+    animation-duration: 4s;
+}
+
+.charactercard:hover {
+    border: solid 1px darken(white, 5%);
+    background-color: darken(#000000, 2%);
+    color: darken(white, 10%);
+}
+
+.charactercard p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.2em;
+}
+
+.charactercard .charactertitle {
+    font-size: 1.5em;
+    letter-spacing: 0.5em;
+    text-transform: uppercase;
+}
+
+.charactercard .hr {
+    color: #fff;
+    background: #fff;
+    width: 4%;
+    height: 1px;
+    margin-left: 48%;
+    -webkit-animation-name: ourname;
+    -webkit-animation-duration: 7s;
+    animation-name: ourname;
+    animation-duration: 7s;
+}
+
+
+/*create character*/
+
+.createCharacter h3 {
+    text-align: center;
+    font-size: 2em;
+    text-justify: auto;
+    color: #242422;
+    letter-spacing: 4px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+/*create campaign*/
+
+.createCampaign,
+.joinCampaign {
+    color: white;
+}
+
+.createCampaign form {
+    -webkit-animation-name: ourname;
+    -webkit-animation-duration: 7s;
+    animation-name: ourname;
+    animation-duration: 7s;
 }
 
 
